--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,11 +3,10 @@ spring.application.name=webforum
 # 应用服务 WEB 访问端口
 server.port=8088
 spring.datasource.name=webforum_datasource
-spring.datasource.url=jdbc:mysql://localhost:3308/webforum?useUnicode=true&characterEncoding=utf-8\
-  &autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url="需自己设置"
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=webforum
-spring.datasource.password=mSSGR4ikKmyLBSr6
+spring.datasource.username="需自己设置"
+spring.datasource.password="需自己设置"
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
@@ -24,9 +23,9 @@ spring.redis.port=6279
 spring.redis.host=127.0.0.1
 spring.redis.database=0
 
-spring.mail.host=smtp.163.com
-spring.mail.username=13759581034@163.com
-spring.mail.password=CDDEHUGOTSNVOXQV
+spring.mail.host="需自己设置"
+spring.mail.username="需自己设置"
+spring.mail.password="需自己设置"
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enble=true
