--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.application.name=webforum
 # 应用服务 WEB 访问端口
 server.port=8088
 spring.datasource.name=webforum_datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/webforum?useUnicode=true&characterEncoding=utf-8\
-  &autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url="需自己设置"
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -30,9 +29,9 @@ spring.redis.jedis.pool.max-active=8
 
 
 
-spring.mail.host=smtp.163.com
-spring.mail.username=13759581034@163.com
-spring.mail.password=CDDEHUGOTSNVOXQV
+spring.mail.host="需自己设置"
+spring.mail.username="需自己设置"
+spring.mail.password="需自己设置"
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enble=true
