--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # 应用名称
 spring.application.name=webforum
 # 应用服务 WEB 访问端口
-server.port=8088
+server.port=80
 spring.datasource.name=webforum_datasource
 spring.datasource.url=jdbc:mysql://localhost:3308/webforum?useUnicode=true&characterEncoding=utf-8\
   &autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
@@ -17,7 +17,9 @@ mybatis.mapper-locations=classpath:mappers/*.xml
 file.upload.dir=/root/webforumimg/
 category.upload.dir=/root/categoryimg/
 file.download.dir=/root/downloads/
-file.Image.dir=/root/postimg/
+file.PostImage.dir=/root/postimg/
+file.CommentImage.dir=/root/commentimg/
+file.banner.dir=/root/bannerimg/
 
 spring.redis.jedis.pool.max-active=3
 spring.redis.port=6279
@@ -36,3 +38,6 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
