--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # 应用名称
 spring.application.name=webforum
 # 应用服务 WEB 访问端口
-server.port=8088
+server.port=80
 spring.datasource.name=webforum_datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/webforum?useUnicode=true&characterEncoding=utf-8\
-  &autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+  &autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -18,7 +18,9 @@ mybatis.mapper-locations=classpath:mappers/*.xml
 file.upload.dir=E://webforumimg/
 category.upload.dir=E://webforumimg/
 file.download.dir = E://download/
-file.Image.dir=E://postimg/
+file.PostImage.dir=E://postimg/
+file.CommentImage.dir=E://commentimg/
+file.banner.dir=E://bannerimg/
 
 spring.redis.port=6379
 spring.redis.host=127.0.0.1
@@ -40,3 +42,6 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
