--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,7 +27,7 @@ spring.redis.host=127.0.0.1
 spring.redis.database=0
 
 spring.mail.host=smtp.163.com
-spring.mail.username=13759581034@163.com
+spring.mail.username=账号@163.com
 spring.mail.password=CDDEHUGOTSNVOXQV
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
