--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.redis.jedis.pool.max-active=8
 
 
 spring.mail.host=smtp.163.com
-spring.mail.username=13759581034@163.com
+spring.mail.username=账号@163.com
 spring.mail.password=CDDEHUGOTSNVOXQV
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
